--- a/public/code/logistic_gallup.Rmd
+++ b/public/code/logistic_gallup.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Logistic Regression in R: Catholic Opinions on Celibate Clergy"
 author: John A. Bernau
-date: "6/26/2018"
+date: '2018-06-27'
 slug: logistic_gallup
 categories: []
 tags: []
