--- a/public/private/google.Rmd
+++ b/public/private/google.Rmd
@@ -98,7 +98,8 @@ summary(random)
 * How do you know which model to use?  
 * First-differences estimator?  
 * Is model controlling for time, or do you have to add that to the model explicitly?  
-* Interaction effects? Namely, shooting characteristics and time.
+* Interaction effects? Namely, shooting characteristics and time.  
+* Random slopes?  Panel models vs multi-level models?  
 * Dynamic panel models? Autocorrelation of DV?  
 
 ___  
