--- a/content/code/world_bank_poverty.Rmd
+++ b/content/code/world_bank_poverty.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Data Exploration: Global Trends in Extreme Poverty'
+title: 'Data Exploration: Global Trends in Extreme Poverty 1977-2016'
 author: John A. Bernau
 date: '2018-08-24'
 slug: wb_poverty
@@ -43,7 +43,7 @@ require(tidyverse)
 From the [World Bank's site](https://data.worldbank.org/indicator/SI.POV.DDAY?locations=1W&start=1981&end=2013&view=chart), download the CSV file and unzip. There will be three CSV files and we'll start with the "API...csv" first. There are four unnecessary rows, so we'll set the `skip` option appropriately, and preserve strings as characters. 
 
 ```{r}
-d <- read.csv("/Users/johnbernau/Box Sync/1. Desktop/4. Methods/1. R/worldbankpoverty/API.csv", skip = 4, stringsAsFactors = FALSE)
+d <- read.csv("/Users/johnbernau/Box Sync/1. Desktop/6. Methods/1. R/worldbankpoverty/API.csv", skip = 4, stringsAsFactors = FALSE)
 ```
 
 ___ 
@@ -100,7 +100,7 @@ ___
 
 Luckily, we can use the accompanying metadata file to append region codes to our data. By adding a category of geographic regions (i.e. "North Africa", "East Asia") we can start to see larger patterns of geographically grouped countries. 
 ```{r}
-m <- read.csv("/Users/johnbernau/Box Sync/1. Desktop/4. Methods/1. R/worldbankpoverty/Metadata.Country.csv", stringsAsFactors = FALSE)
+m <- read.csv("/Users/johnbernau/Box Sync/1. Desktop/6. Methods/1. R/worldbankpoverty/Metadata.Country.csv", stringsAsFactors = FALSE)
 ```
 
 To join, variables must have exact names. After renaming our country code variable, I join with the initial data. Lastly, we'll remove any missing `Region` values and take out North America.
