--- a/content/code/world_bank_poverty.Rmd
+++ b/content/code/world_bank_poverty.Rmd
@@ -16,8 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 <a name="top"></a>
 In this post I perform some data exploration in R. I'll cover the following topics:
 
-
-<img src= "https://upload.wikimedia.org/wikipedia/commons/f/f8/Hobos2.jpg" height="400" align = "right" vspace = "50" hspace = "50" />
+<img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/Hobos2.jpg" style="float: right; width: 50%; margin-left: 2%; margin-right: 2%;margin-bottom: 0.5em;">
 
 - [Importing data](#import)
 - [Preparing data](#prep)
