--- a/public/code/text_analysis.Rmd
+++ b/public/code/text_analysis.Rmd
@@ -98,7 +98,7 @@ emotion_words <- length(vocab_neg) + length(vocab_pos)
 proportion_pos <- length(vocab_pos) / emotion_words
 ```
 
-Based on this sentiment scoring, the opening paragraph of *Moby Dick* is 2/3 positive and 1/3 negative. **Does this sound accurate as a human reader of the text?** Ishmael tells us of his misanthropic fantasies, of the "*damp drizzly November in my soul*", and how going to sea is his only option to stave off suicide: "*my substitute for pistol and ball.*" This type of dictionary-based text analysis is ultimately limited to an atomistic model of language that fails to pick up on fairly basic literary techniques. Recent developments [like this one at Stanford](https://nlp.stanford.edu/sentiment/) have used neural networks to account for more complex sentence structures.
+Based on this sentiment scoring, the opening paragraph of *Moby Dick* is 2/3 positive and 1/3 negative. **Does this sound accurate as a human reader of the text?** Ishmael tells us of his misanthropic fantasies, of the "*damp drizzly November in my soul*", and how going to sea is his only option to stave off suicide: "*my substitute for pistol and ball.*" This type of dictionary-based text analysis is ultimately limited to an atomistic model of language that fails to pick up on fairly basic literary techniques. Recent developments [like this one at Stanford](https://nlp.stanford.edu/~socherr/EMNLP2013_RNTN.pdf) have used neural networks to account for more complex sentence structures.
   
 To sum up, after starting with a raw string of text, I removed unwanted characters, calculated a few vocabulary metrics, ran a dictionary-based sentiment analysis, and summarized the results. The following code saves this information as a dataframe.   
 ```{r}
@@ -116,7 +116,7 @@ glimpse(moby_df)
 ## Text within Data Frames
 To start, a dataframe with a column for text data...
 ```{r}
-# Generate some respondent ids and (identical) text responses
+# Generate some respondent ids and three (identical) text responses
 id <- c("person1", "person2", "person3")
 text <- rep("Example text with UPPER CASE, punctuation (!), and numbers (123456789). This should serve us well in our text-cleaning journey. Also, here are some sad negative words and some happy positive words.", 3)
 
@@ -137,7 +137,7 @@ df$text <- gsub("\\s+", " ", str_trim(df$text)) # Remove extra whitespaces
 df$text[1] # Print
 ```
 
-Note that by removing punctuation, "textcleaning" was collapsed into one word. This is usually acceptable for most hyphenated words, but in case you want to preserve the spacing, you can just replace all punctuation with a space (" ") and the subsequent line will strip / collapse any extra spaces that result. 
+Note that by removing punctuation, "textcleaning" was collapsed into one word. This is usually acceptable for most hyphenated words, but to preserve the spacing, just replace all punctuation with a space (" ") and the subsequent line will strip / collapse any extra spaces that result. 
 
 <a name="vocab2"></a>
 
@@ -149,7 +149,7 @@ vocab <- df %>%
 head(vocab)
 ```
 
-Then I create a separate dataframe that captures a few summary measures (total, unique, and lexical diversity). This will come in handy later on.
+Creating a separate dataframe that captures a few summary measures (total, unique, and lexical diversity). This will come in handy later.
 ```{r}
 total_unique_ld <- vocab %>% 
   group_by(id) %>% 
@@ -168,7 +168,7 @@ vocab_nsw <- vocab %>%
   anti_join(stop_words)
 ```
 
-Saving this tidy dataframe as new strings by collapsing words [(thanks to stackoverflow)](https://stackoverflow.com/questions/46734501/opposite-of-unnest-tokens). This will come in handy later on. 
+Saving this tidy dataframe as new strings by collapsing words [(thanks to stackoverflow)](https://stackoverflow.com/questions/46734501/opposite-of-unnest-tokens). This will come in handy later. 
 ```{r}
 cleantext <- nest(vocab_nsw, word) %>%
   mutate(text = map(data, unlist),
@@ -179,7 +179,7 @@ cleantext <- nest(vocab_nsw, word) %>%
 <a name="sent2"></a>
 
 **Basic Sentiment Scores**  
-To get the dictionary-based sentiment results, I first run an `inner-join` which retains only the "emotion words" in the `bing` dictionary. Then, I do calculate two things: (1) a string of the positive / negative words that were extracted, and (2) a count of the total emotion words extracted and the proportion positive. 
+To get the dictionary-based sentiment results, I first run an `inner-join` which retains only the "emotion words" in the `bing` dictionary. Then, I generate two things: (1) a string of the positive / negative words that were extracted, and (2) a count of the total emotion words extracted and the proportion positive. 
 ```{r, message = FALSE}
 vocab_sent <- vocab_nsw %>%
   inner_join(get_sentiments("bing"))
@@ -214,10 +214,7 @@ df_final <- df_original %>%
 glimpse(df_final)
 ```
 
-<div style = "text-align: center">**The End**</div>
-
-<img src="/code/hm2.jpg" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 3%;">
-<img src="/code/dwsb.jpg" style="float: right; width: 49%; margin-right: 1%; margin-bottom: 3%;">
+<img src="/code/chi_boat.jpg">
 
 ___
 
