--- a/public/code/text_analysis.Rmd
+++ b/public/code/text_analysis.Rmd
@@ -216,10 +216,8 @@ glimpse(df_final)
 
 <img src="/code/chi_boat.jpg">
 
-___
-
-[Code Home](/xcode/) 
+[**Code Home**](/xcode/) 
 
 ___
 
-### *Copyright &copy; 2018 John A. Bernau*
+<font color = "gray", size="2">Copyright &copy; 2018 John A. Bernau</font>
